# market-dash

./: .env.example  .gitignore  PLAN.md  README.md  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json  unusual_whales_flow_bot.md
.devcontainer/: devcontainer.json  docker-compose.yml
apps/web/: index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/api/: client.ts  index.ts  types.ts
apps/web/src/components/: Card.tsx  Layout.tsx
apps/web/src/lib/: utils.ts
apps/web/src/pages/: Dashboard.tsx  Screener.tsx
docs/: MARKET_ANALYTICS_RESEARCH.md
infra/database/: README.md
infra/database/init/: 001_schema.sql
infra/pulumi/: Pulumi.yaml  index.ts  package.json  tsconfig.json
services/market-ingestor/: .env.example  Dockerfile  go.mod  go.sum  main.go
services/market-ingestor/internal/api/: router.go
services/market-ingestor/internal/config/: config.go
services/market-ingestor/internal/models/: market.go
services/market-ingestor/internal/polygon/: client.go
services/market-ingestor/migrations/: 001_initial_schema.sql
services/news-analyzer/: .env.example  Dockerfile  pyproject.toml
services/news-analyzer/migrations/: 001_initial_schema.sql
services/news-analyzer/src/news_analyzer/: __init__.py  aggregator.py  analyzer.py  config.py  main.py  models.py
workers/api-gateway/: package.json  tsconfig.json  wrangler.toml
workers/api-gateway/src/: index.ts
(+14 files in other folders)
